--- a/wp-content/themes/wp-starter/template-parts/partials/footer.twig
+++ b/wp-content/themes/wp-starter/template-parts/partials/footer.twig
@@ -1,5 +1,5 @@
-<footer class="py-10 mt-10 text-white lg:pt-20 flex-0 bg-blue-03 lg:mt-20">
-	{# <div class="container px-4 space-y-10 md:px-8">
+<footer class="py-10 mt-10 text-white lg:pt-20 flex-0 bg-bg-primary lg:mt-20">
+	<div class="container px-4 space-y-10 md:px-8">
 		<div class="flex flex-col space-y-10 lg:-mx-3 lg:flex-wrap lg:flex-row lg:space-y-0">
 			<div class="w-full lg:w-1/3 lg:px-3">
 				<a class="text-white text-large" href="{{ function('home_url') }}">
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 			<div class="w-full lg:w-1/3 lg:px-3">
-				<div class="space-y-3 lg:w-3/4 lg:space-y-5">
+				{# <div class="space-y-3 lg:w-3/4 lg:space-y-5">
 					<div class="text-xl font-semibold leading-5">
 						Newsletter
 					</div>
@@ -24,7 +24,7 @@
 						<script charset="utf-8" type="text/javascript" src="https://js-eu1.hsforms.net/forms/embed/v2.js"></script> 
 						<script> hbspt.forms.create({ portalId: "144113445", formId: "0a5e9fc5-6c1f-4d40-932b-399995c83826" }); </script>
 					</div>
-				</div>
+				</div> #}
 			</div>
 			<div class="flex flex-wrap text-xl font-semibold lg:w-1/3 lg:px-3">
 				<nav class="w-1/2">
@@ -91,7 +91,7 @@
 				</p>
 			</div>
 		{% endif %}
-	</div> #}
+	</div>
 </footer>
 
 {{ function('wp_footer') }}
