--- a/wp-content/themes/wp-starter/template-parts/base.twig
+++ b/wp-content/themes/wp-starter/template-parts/base.twig
@@ -2,7 +2,7 @@
 <html {{ function('language_attributes') }}>
 	{# Head #}
 	{% include 'head.twig' %}
-	<body {{ function('body_class', 'bg-black') }} id="body">
+	<body {{ function('body_class', 'bg-main-bg font-sans') }} id="body">
 		{{ function('wp_body_open') }}
 		{# header #}
 		<div class="flex flex-col min-h-screen text-white page-wrapper">
