--- a/wp-content/themes/wp-starter/template-parts/archive.twig
+++ b/wp-content/themes/wp-starter/template-parts/archive.twig
@@ -1,10 +1,12 @@
 {% extends 'index.twig' %}
 
 {% block content %}
-	<div class="container my-12">
+	<div class="container px-4 my-12 md:px-12">
 		<h3 class="text-2xl font-bold">
 			This is my archive: {{ title }}
 		</h3>
 	</div>
-	{{ parent() }}
+	<div class="grid grid-cols-3">
+		{{ parent() }}
+	</div>
 {% endblock %}
