--- a/wp-content/themes/wp-starter/template-parts/head.twig
+++ b/wp-content/themes/wp-starter/template-parts/head.twig
@@ -4,7 +4,5 @@
 	{{ function('wp_head') }}
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B8NEKHEH60"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-B8NEKHEH60'); </script>
-	<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="4600941d-d203-4689-89f4-537ba398486f" data-blockingmode="auto" type="text/javascript"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
