--- a/wp-content/themes/wp-starter/template-parts/partials/footer.twig
+++ b/wp-content/themes/wp-starter/template-parts/partials/footer.twig
@@ -1,6 +1,6 @@
 <footer class="py-10 mt-10 text-white lg:pt-20 flex-0 bg-bg-primary lg:mt-20">
-	<div class="container px-4 space-y-10 md:px-8">
-		<div class="flex flex-col space-y-10 lg:-mx-3 lg:flex-wrap lg:flex-row lg:space-y-0">
+	<div class="container px-4 space-y-10 md:px-12">
+		<div class="flex flex-col lg:-mx-3 lg:flex-wrap lg:flex-row">
 			<div class="w-full lg:w-1/3 lg:px-3">
 				<a class="text-white text-large" href="{{ function('home_url') }}">
 					{% include 'partials/logo.twig' %}
@@ -81,16 +81,6 @@
 			<p>{{copyright}}</p>
 			<a href="{{privacy_policy_page}}" class="inline-block mt-10 underline lg:mt-0">{{ __('Website disclaimer & Privacy Policy', 'website-disclaimer') }}</a>
 		</div>
-		{% if IS_VITE_DEVELOPMENT %}
-			<div class="container mx-auto text-center">
-				<p class="text-xs">Currently in
-					<strong>
-						development
-					</strong>
-					mode.
-				</p>
-			</div>
-		{% endif %}
 	</div>
 </footer>
 
