--- a/wp-content/themes/wp-starter/template-parts/tease.twig
+++ b/wp-content/themes/wp-starter/template-parts/tease.twig
@@ -1,14 +1,14 @@
 <article class="tease h-full tease-{{ post.post_type }}" id="tease-{{ post.ID }}">
 	{% block content %}
-		<div class="flex flex-col h-full bg-gray-03 rounded-3xl">
-			<div class="overflow-hidden aspect-w-16 aspect-h-9 rounded-3xl">
+		<div class="flex flex-col h-full">
+			<div class="overflow-hidden aspect-w-4 aspect-h-3">
 				{% if post.thumbnail %}
 					<a href="{{ post.link }}" class="transition-all hover:opacity-70">
 						<img loading="lazy" class="absolute inset-0 object-cover object-center w-full h-full" src="{{ post.thumbnail.src }}" srcset="{{ post.thumbnail.srcset }}" sizes="(max-width: 768px) 100vw, (max-width: 1024px) 500px" alt="{{ post.thumbnail.alt | default('Image') }}">
 					</a>
 				{% endif %}
 			</div>
-			<div class="flex flex-col p-5 space-y-4 grow">
+			<div class="flex flex-col space-y-4 grow">
 				<div class="text-base">{{ post.post_date|date("M j, Y") }}</div>
 				<h3 class="h4">
 					<a href="{{ post.link }}">{{ post.title }}</a>
@@ -16,7 +16,12 @@
 				<p class="body-1 grow">
 					{{ post.excerpt.read_more(false) }}
 				</p>
-				<a href="{{ post.link }}" class="inline-block mt-5 btn-secondary">Read More</a>
+				<a href="{{ post.link }}" class="mt-5 btn-secondary">
+					<span>Read More</span>
+					<svg class="ml-2" width="17" height="17" viewbox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path fill-rule="evenodd" clip-rule="evenodd" d="M4.75 0.25L16 0.25C16.1989 0.25 16.3897 0.329018 16.5303 0.46967C16.671 0.610322 16.75 0.801088 16.75 1V12.25C16.75 12.6642 16.4142 13 16 13C15.5858 13 15.25 12.6642 15.25 12.25V2.81066L1.53033 16.5303C1.23744 16.8232 0.762563 16.8232 0.46967 16.5303C0.176777 16.2374 0.176777 15.7626 0.46967 15.4697L14.1893 1.75L4.75 1.75C4.33579 1.75 4 1.41421 4 1C4 0.585787 4.33579 0.25 4.75 0.25Z" fill="white"/>
+					</svg>
+				</a>
 			</div>
 		</div>
 	{% endblock %}
