adding members/team logic

--- a/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
@@ -7,7 +7,7 @@
 		</radialGradient>
 	</defs>
 </svg> #}
-<section class="container relative px-6 -mt-[134px] md:px-12">
+<section class="container relative -mt-[134px] ">
 	<div class="relative flex flex-col md:flex-row-reverse md:flex-wrap">
 		{% set title = fields.title ?? 'Hero Home' %}
 		{% set text = fields.text ?? '' %}
