--- a/wp-content/themes/wp-starter/template-parts/page.twig
+++ b/wp-content/themes/wp-starter/template-parts/page.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 
 {% block content %}
-	<div class="content-wrapper">
+	<div class="px-6 content-wrapper md:px-12">
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
 			<section class="article-content">
 				<div class="space-y-10 article-body md:space-y-20">
