--- a/wp-content/themes/wp-starter/assets/css/styles.css
+++ b/wp-content/themes/wp-starter/assets/css/styles.css
@@ -29,7 +29,6 @@ html {
   @apply scroll-smooth;
 }
 
-
 .editor-styles-wrapper {
   @apply text-[22px];
   font-family: 'Inter', sans-serif !important;
@@ -44,15 +43,6 @@ h1.editor-post-title {
 body.admin-bar {
   max-height: calc(100vh - 32px);
 }
-
-/* :is(.article-body, #content) > *:not([class*='section-block']) {
-	@apply container;
-	@apply my-6;
-}
-
-:is(.article-body, #content) :is(p, li, blockquote) {
-	@apply max-w-4xl;
-} */
 
 .js-accordion-faq .faq-answer {
   @apply transition-all max-h-0;
@@ -127,9 +117,8 @@ h3.active .icon-horizontal {
 }
 
 .js-nav.nav-open .inner-nav {
-  @apply translate-x-0
+  @apply translate-x-0;
 }
-
 
 .container {
   @apply max-w-[1504px] mx-auto w-full;
@@ -154,4 +143,26 @@ h3.active .icon-horizontal {
 }
 .wp-block-gallery .core-block {
   @apply inline-flex w-1/2;
+}
+
+.title-about,
+.parent-title-about
+ {
+  background-image: url('data:image/svg+xml,%3Csvg%20width%3D%22557%22%20height%3D%221342%22%20viewBox%3D%220%200%20557%201342%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M0.399902%2096.05L576.4%20-736.35V352.45L0.399902%2096.05ZM626.8%20-736.35V352.45L1202.8%2096.05L626.8%20-736.35ZM227.4%20252.25L605.8%20407.65L974.4%20255.85L1202.8%20340.45L601.6%20596.85L0.399902%20340.45L227.4%20252.25ZM576.4%20878.65L0.399902%20630.45L576.4%201341.05V878.65ZM1202.8%20630.45L626.8%20878.65V1341.05L1202.8%20630.45ZM605.8%20650.05L227.4%20494.45L0.399902%20582.65L601.6%20839.25L1202.8%20582.65L974.4%20498.05L605.8%20650.05Z%22%20fill%3D%22url(%23paint0_radial_4856_38094)%22%20style%3D%22mix-blend-mode%3Alighten%22%2F%3E%3Cdefs%3E%3CradialGradient%20id%3D%22paint0_radial_4856_38094%22%20cx%3D%220%22%20cy%3D%220%22%20r%3D%221%22%20gradientUnits%3D%22userSpaceOnUse%22%20gradientTransform%3D%22translate(637.4%20327.65)%20rotate(-89.6231)%20scale(1064.02%20650.663)%22%3E%3Cstop%20stop-color%3D%22%23FFCF01%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%230E0E0E%22%20stop-opacity%3D%220%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
+  @apply bg-no-repeat bg-right-top;
+  background-size: 200px 500px;
+}
+
+@media (min-width: 764px) {
+  .title-about,
+  .parent-title-about {
+    background-size: 400px 1000px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .title-about,
+  .parent-title-about {
+    background-size: 600px 1500px;
+  }
 }
