--- a/wp-content/themes/wp-starter/template-parts/page.twig
+++ b/wp-content/themes/wp-starter/template-parts/page.twig
@@ -1,10 +1,12 @@
 {% extends 'base.twig' %}
 
 {% block content %}
-	<div class="px-6 content-wrapper md:px-12">
+	<div class="container px-6 content-wrapper md:px-12">
+		
+		{% include 'breadcrumbs.twig' with { 'page': page } %}
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
 			<section class="article-content">
-				<div class="space-y-10 article-body md:space-y-20">
+				<div class="space-y-10 article-body md:space-y-12">
 					{{ post.content }}
 				</div>
 			</section>
