board anchor component

--- a/wp-content/themes/wp-starter/assets/css/typography.css
+++ b/wp-content/themes/wp-starter/assets/css/typography.css
@@ -189,7 +189,8 @@ h2.wp-block-heading  {
 
 
 @media (min-width: 1024px) {
-  .article-content .core-block > p {
+  .article-content .core-block > p,
+  .article-content .core-block > h2 {
     @apply max-w-[66%]
   }
 }
