--- a/wp-content/themes/wp-starter/assets/css/custom-components.css
+++ b/wp-content/themes/wp-starter/assets/css/custom-components.css
@@ -1,6 +1,6 @@
 @layer components {
 	.btn-primary {
-		@apply bg-coral-01 whitespace-nowrap text-white rounded-[10px] px-[14px] py-[10px] antialiased uppercase text-base leading-4 inline-block font-semibold text-center transition-all;
+		@apply bg-white inline-block whitespace-nowrap text-black rounded-[8px] px-[35px] py-[14px] antialiased text-base leading-[120%] inline-block font-bold text-center transition-all;
 	}
 	
 	.btn-secondary {
