--- a/wp-content/themes/wp-starter/assets/css/styles.css
+++ b/wp-content/themes/wp-starter/assets/css/styles.css
@@ -145,24 +145,60 @@ h3.active .icon-horizontal {
   @apply inline-flex w-1/2;
 }
 
-.title-about,
-.parent-title-about
- {
+.title-about {
+  background-image: url("data:image/svg+xml,%3Csvg%20width%3D%22557%22%20height%3D%221342%22%20viewBox%3D%220%200%20557%201342%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M0.399902%2096.05L576.4%20-736.35V352.45L0.399902%2096.05ZM626.8%20-736.35V352.45L1202.8%2096.05L626.8%20-736.35ZM227.4%20252.25L605.8%20407.65L974.4%20255.85L1202.8%20340.45L601.6%20596.85L0.399902%20340.45L227.4%20252.25ZM576.4%20878.65L0.399902%20630.45L576.4%201341.05V878.65ZM1202.8%20630.45L626.8%20878.65V1341.05L1202.8%20630.45ZM605.8%20650.05L227.4%20494.45L0.399902%20582.65L601.6%20839.25L1202.8%20582.65L974.4%20498.05L605.8%20650.05Z%22%20fill%3D%22url(%23paint0_radial_4860_39164)%22%20style%3D%22mix-blend-mode%3Alighten%22%2F%3E%3Cdefs%3E%3CradialGradient%20id%3D%22paint0_radial_4860_39164%22%20cx%3D%220%22%20cy%3D%220%22%20r%3D%221%22%20gradientUnits%3D%22userSpaceOnUse%22%20gradientTransform%3D%22translate(637.4%20327.65)%20rotate(-89.6231)%20scale(1064.02%20650.663)%22%3E%3Cstop%20stop-color%3D%22%23454545%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%230E0E0E%22%20stop-opacity%3D%220%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E");
+  @apply bg-no-repeat bg-right-top;
+  background-size: 200px 500px;
+}
+
+.parent-title-about {
   background-image: url('data:image/svg+xml,%3Csvg%20width%3D%22557%22%20height%3D%221342%22%20viewBox%3D%220%200%20557%201342%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M0.399902%2096.05L576.4%20-736.35V352.45L0.399902%2096.05ZM626.8%20-736.35V352.45L1202.8%2096.05L626.8%20-736.35ZM227.4%20252.25L605.8%20407.65L974.4%20255.85L1202.8%20340.45L601.6%20596.85L0.399902%20340.45L227.4%20252.25ZM576.4%20878.65L0.399902%20630.45L576.4%201341.05V878.65ZM1202.8%20630.45L626.8%20878.65V1341.05L1202.8%20630.45ZM605.8%20650.05L227.4%20494.45L0.399902%20582.65L601.6%20839.25L1202.8%20582.65L974.4%20498.05L605.8%20650.05Z%22%20fill%3D%22url(%23paint0_radial_4856_38094)%22%20style%3D%22mix-blend-mode%3Alighten%22%2F%3E%3Cdefs%3E%3CradialGradient%20id%3D%22paint0_radial_4856_38094%22%20cx%3D%220%22%20cy%3D%220%22%20r%3D%221%22%20gradientUnits%3D%22userSpaceOnUse%22%20gradientTransform%3D%22translate(637.4%20327.65)%20rotate(-89.6231)%20scale(1064.02%20650.663)%22%3E%3Cstop%20stop-color%3D%22%23FFCF01%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%230E0E0E%22%20stop-opacity%3D%220%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
   @apply bg-no-repeat bg-right-top;
   background-size: 200px 500px;
 }
 
+.title-become-a-member,
+.parent-title-become-a-member {
+  background-image: url("data:image/svg+xml,%3Csvg fill='none' viewBox='0 0 557 1342' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='m.4 96.05 576-832.4v1088.8L.4 96.05Zm626.4-832.4v1088.8l576-256.4-576-832.4Zm-399.4 988.6 378.4 155.4 368.6-151.8 228.4 84.6-601.2 256.4L.4 340.45l227-88.2Zm349 626.4L.4 630.45l576 710.6v-462.4Zm626.4-248.2-576 248.2v462.4l576-710.6Zm-597 19.6-378.4-155.6-227 88.2 601.2 256.6 601.2-256.6-228.4-84.6-368.6 152Z' clip-rule='evenodd' style='mix-blend-mode:lighten'/%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='0' r='1' gradientTransform='matrix(7.00109 -1063.99697 650.64891 4.28126 637.399 327.65)' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23B47AB4'/%3E%3Cstop offset='1' stop-color='%230E0E0E' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3C/svg%3E");
+  @apply bg-no-repeat bg-right-top;
+  background-size: 200px 500px;
+}
+
+.title-groups,
+.parent-title-groups {
+  background-image: url('data:image/svg+xml,%3Csvg%20width%3D%22557%22%20height%3D%221342%22%20viewBox%3D%220%200%20557%201342%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M0.400391%2096.05L576.4%20-736.35V352.45L0.400391%2096.05ZM626.8%20-736.35V352.45L1202.8%2096.05L626.8%20-736.35ZM227.4%20252.25L605.8%20407.65L974.4%20255.85L1202.8%20340.45L601.6%20596.85L0.400391%20340.45L227.4%20252.25ZM576.4%20878.65L0.400391%20630.45L576.4%201341.05V878.65ZM1202.8%20630.45L626.8%20878.65V1341.05L1202.8%20630.45ZM605.8%20650.05L227.4%20494.45L0.400391%20582.65L601.6%20839.25L1202.8%20582.65L974.4%20498.05L605.8%20650.05Z%22%20fill%3D%22url(%23paint0_radial_4856_38086)%22%20style%3D%22mix-blend-mode%3Alighten%22%2F%3E%3Cdefs%3E%3CradialGradient%20id%3D%22paint0_radial_4856_38086%22%20cx%3D%220%22%20cy%3D%220%22%20r%3D%221%22%20gradientUnits%3D%22userSpaceOnUse%22%20gradientTransform%3D%22translate(637.4%20327.65)%20rotate(-89.6231)%20scale(1064.02%20650.663)%22%3E%3Cstop%20stop-color%3D%22%2301AB64%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%230E0E0E%22%20stop-opacity%3D%220%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
+  @apply bg-no-repeat bg-right-top;
+  background-size: 200px 500px;
+}
+
+.title-resources,
+.parent-title-resources {
+  background-image: url('data:image/svg+xml,%3Csvg%20width%3D%22557%22%20height%3D%221342%22%20viewBox%3D%220%200%20557%201342%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M0.400391%2096.05L576.4%20-736.35V352.45L0.400391%2096.05ZM626.8%20-736.35V352.45L1202.8%2096.05L626.8%20-736.35ZM227.4%20252.25L605.8%20407.65L974.4%20255.85L1202.8%20340.45L601.6%20596.85L0.400391%20340.45L227.4%20252.25ZM576.4%20878.65L0.400391%20630.45L576.4%201341.05V878.65ZM1202.8%20630.45L626.8%20878.65V1341.05L1202.8%20630.45ZM605.8%20650.05L227.4%20494.45L0.400391%20582.65L601.6%20839.25L1202.8%20582.65L974.4%20498.05L605.8%20650.05Z%22%20fill%3D%22url(%23paint0_radial_4856_38006)%22%20style%3D%22mix-blend-mode%3Alighten%22%2F%3E%3Cdefs%3E%3CradialGradient%20id%3D%22paint0_radial_4856_38006%22%20cx%3D%220%22%20cy%3D%220%22%20r%3D%221%22%20gradientUnits%3D%22userSpaceOnUse%22%20gradientTransform%3D%22translate(637.4%20327.65)%20rotate(-89.6231)%20scale(1064.02%20650.663)%22%3E%3Cstop%20stop-color%3D%22%2300B6F0%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%230E0E0E%22%20stop-opacity%3D%220%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
+  @apply bg-no-repeat bg-right-top;
+  background-size: 200px 500px;
+}
+
+.title-news-events,
+.parent-title-news-events {
+  background-image: url('data:image/svg+xml,%3Csvg%20width%3D%22557%22%20height%3D%221342%22%20viewBox%3D%220%200%20557%201342%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M0.398438%2096.05L576.398%20-736.35V352.45L0.398438%2096.05ZM626.798%20-736.35V352.45L1202.8%2096.05L626.798%20-736.35ZM227.398%20252.25L605.798%20407.65L974.398%20255.85L1202.8%20340.45L601.598%20596.85L0.398438%20340.45L227.398%20252.25ZM576.398%20878.65L0.398438%20630.45L576.398%201341.05V878.65ZM1202.8%20630.45L626.798%20878.65V1341.05L1202.8%20630.45ZM605.798%20650.05L227.398%20494.45L0.398438%20582.65L601.598%20839.25L1202.8%20582.65L974.398%20498.05L605.798%20650.05Z%22%20fill%3D%22url(%23paint0_radial_4856_38038)%22%20style%3D%22mix-blend-mode%3Alighten%22%2F%3E%3Cdefs%3E%3CradialGradient%20id%3D%22paint0_radial_4856_38038%22%20cx%3D%220%22%20cy%3D%220%22%20r%3D%221%22%20gradientUnits%3D%22userSpaceOnUse%22%20gradientTransform%3D%22translate(637.398%20327.65)%20rotate(-89.6231)%20scale(1064.02%20650.663)%22%3E%3Cstop%20stop-color%3D%22%23F98D76%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%230E0E0E%22%20stop-opacity%3D%220%22%2F%3E%3C%2FradialGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
+  @apply bg-no-repeat bg-right-top;
+  background-size: 200px 500px;
+}
+
 @media (min-width: 764px) {
-  .title-about,
-  .parent-title-about {
+  [class*=' title-'],
+  [class^='title-'],
+  [class*='parent-title-'],
+  [class^='parent-title-'] {
     background-size: 400px 1000px;
   }
 }
 
 @media (min-width: 1024px) {
-  .title-about,
-  .parent-title-about {
+  [class*='title-'],
+  [class^='title-'],
+  [class*='parent-title-'],
+  [class^='parent-title-'] {
     background-size: 600px 1500px;
   }
 }
