--- a/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
@@ -1,18 +1,7 @@
 <section class="overflow-hidden">
 	<div class="container px-6 md:px-12">
-		<div class="flex flex-col p-4 bg-blue-05 hero-home gap-y-4 rounded-xl lg:p-6">
-			{% set title = fields.title ?? 'Horizontal Accordion' %}
-			{% set text = fields.text ?? '' %}
+		<div class="flex flex-col p-4 hero-home gap-y-4 lg:p-6">
 			{% set qas = fields.qas %}
-
-			<div class="flex flex-col justify-between gap-y-4 lg:flex-row">
-				<h2 class="{% if text %}lg:w-5/12{% else %}lg:w-7/12{% endif %}  h2">{{ title }}</h2>
-				{% if text|length %}
-					<p class="self-end lg:w-5/12 body-2 lg:pb-2">
-						{{ text | raw }}
-					</p>
-				{% endif %}
-			</div>
 
 			{% if qas %}
 				<div class="flex flex-wrap mt-5 lg:mt-14">
@@ -22,7 +11,7 @@
 								<div class="w-full swiper-slide">
 									{% set icon = qa.icon ? get_image(qa.icon) : false %}
 									<div class="w-full h-full qa lg:w-1/4">
-										<div class="h-full p-5 rounded-xl bg-blue-04">
+										<div class="h-full p-5 bg-blue-04">
 											<div class="flex flex-col h-full gap-y-4">
 												<h3 class="h4">{{ qa.title }}</h3>
 												<p class="grow body-2">{{ qa.text }}</p>
@@ -42,7 +31,7 @@
 							<div style="width:{{ 100 / (qas|length + 1) }}%" class="relative px-2 overflow-hidden transition-all duration-1000 origin-top-left js-accordion-horz-item">
 								{% set icon = qa.icon ? get_image(qa.icon) : false %}
 								<div class="w-full h-full qa">
-									<div class="relative h-full p-5 cursor-default rounded-3xl bg-blue-04 lg:overflow-hidden">
+									<div class="relative h-full p-5 cursor-default lg:overflow-hidden">
 										<div class="relative z-10 flex flex-col h-full gap-y-4">
 											<h3 class="w-full transition-all body-3">{{ qa.title }}</h3>
 											<p class="transition-all duration-500 grow body-2 lg:opacity-0">{{ qa.text }}</p>
