--- a/wp-content/themes/wp-starter/template-parts/blocks/faq.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/faq.twig
@@ -1,12 +1,7 @@
-<section class="container px-6 md:px-">
+<div class="container px-6 md:px-">
 	<div class="flex flex-col px-4">
 		{% set title = fields.title ?? 'FAQ Accordion' %}
 		{% set qas = fields.qas %}
-
-		<div class="flex flex-col justify-between lg:flex-row">
-			<h2 class="h2">{{ title }}</h2>
-		</div>
-
 		{% if qas %}
 			<div class="flex flex-wrap mt-8 lg:mt-12">
 				<div class="js-accordion-faq">
@@ -33,4 +28,4 @@
 			</div>
 		{% endif %}
 	</div>
-</section>
+</div>
