--- a/wp-content/themes/wp-starter/template-parts/blocks/quote.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/quote.twig
@@ -1,9 +1,8 @@
 {% set title = fields.title ?? 'Quote component' %}
 {% set items = fields.items %}
 
-<section>
+<div>
     <div class="container px-6 md:px-12">
-        <h2 class="text-center h2">{{ title }}</h2>
         {% if items %}
 			<div class="mt-8 lg:mt-16">
 				<div class="swiper js-quotes-carousel">
@@ -23,4 +22,4 @@
 			</div>
 		{% endif %}
     </div>
-</section>
+</div>
