--- a/wp-content/themes/wp-starter/template-parts/page.twig
+++ b/wp-content/themes/wp-starter/template-parts/page.twig
@@ -2,8 +2,9 @@
 
 {% block content %}
 	<div class="container px-6 content-wrapper md:px-12">
-		
-		{% include 'breadcrumbs.twig' with { 'page': page } %}
+		{% if post.slug != 'homepage' %}
+			{% include 'breadcrumbs.twig' with { 'page': page } %}
+		{% endif %}
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
 			<section class="article-content">
 				<div class="space-y-10 article-body md:space-y-12">
