--- a/wp-content/themes/wp-starter/template-parts/tease.twig
+++ b/wp-content/themes/wp-starter/template-parts/tease.twig
@@ -1,21 +1,23 @@
 <article class="tease h-full tease-{{ post.post_type }}" id="tease-{{ post.ID }}">
 	{% block content %}
 		<div class="flex flex-col h-full">
-			<div class="overflow-hidden aspect-w-4 aspect-h-3">
+			<div class="mb-5 overflow-hidden aspect-w-4 aspect-h-3">
 				{% if post.thumbnail %}
 					<a href="{{ post.link }}" class="transition-all hover:opacity-70">
 						<img loading="lazy" class="absolute inset-0 object-cover object-center w-full h-full" src="{{ post.thumbnail.src }}" srcset="{{ post.thumbnail.srcset }}" sizes="(max-width: 768px) 100vw, (max-width: 1024px) 500px" alt="{{ post.thumbnail.alt | default('Image') }}">
 					</a>
 				{% endif %}
 			</div>
-			<div class="flex flex-col space-y-4 grow">
-				<div class="text-base">{{ post.post_date|date("M j, Y") }}</div>
-				<h3 class="h4">
+			<div class="flex flex-col space-y-5 grow">
+				<h3 class="h5">
 					<a href="{{ post.link }}">{{ post.title }}</a>
 				</h3>
-				<p class="body-1 grow">
-					{{ post.excerpt.read_more(false) }}
-				</p>
+				{% if post.excerpt|length %}
+					<p class="text-base leading-[200%] text-white/80 grow">
+						{{ post.excerpt.read_more(false) }}
+					</p>
+				{% endif %}
+				<div class="text-lg text-white/80 ">{{ post.post_date|date("M j, Y") }}</div>
 				<a href="{{ post.link }}" class="mt-5 btn-secondary">
 					<span>Read More</span>
 					<svg class="ml-2" width="17" height="17" viewbox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
